--- a/main.css
+++ b/main.css
@@ -4,3 +4,11 @@
 #main-header {
   border: 1px solid black;
 }
+
+#main-nav ul li {
+    list-style-type: none;
+    display: inline-flex;
+    flex-grow: 1;
+    margin-left: 5%;
+    margin-right: 5%
+}
