restructured html page and added missing closing tags

--- a/main.css
+++ b/main.css
@@ -12,3 +12,15 @@
     margin-left: 5%;
     margin-right: 5%
 }
+
+.active {
+  color: yellow;
+}
+
+.disabled {
+  color: grey;
+}
+
+a > .disabled {
+  color: purple;
+}
