--- a/main.css
+++ b/main.css
@@ -21,6 +21,24 @@
   color: grey;
 }
 
+.promo {
+  font-weight: bold;
+  color: gold;
+}
+
 a > .disabled {
   color: purple;
+}
+
+.grandparent > h4 {
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+#iam-red {
+  color: red;
+}
+
+#iam-blue {
+  color: blue;
 }
